Limit amount of non-acked messages

--- a/services/cannon/cannon.cabal
+++ b/services/cannon/cannon.cabal
@@ -114,6 +114,7 @@ library
     , safe-exceptions
     , servant-conduit
     , servant-server
+    , stm
     , strict                                >=0.3.2
     , text                                  >=1.1
     , tinylog                               >=0.10
