Add Pulsar endpoint config to Helm charts
We could configure more. However, we can do that when we exactly know
what.

--- a/charts/cannon/templates/configmap.yaml
+++ b/charts/cannon/templates/configmap.yaml
@@ -39,6 +39,12 @@ data:
     rabbitMqMaxConnections: {{ .config.rabbitMqMaxConnections }}
     rabbitMqMaxChannels: {{ .config.rabbitMqMaxChannels }}
 
+    {{- with .config.pulsar }}
+    pulsar:
+      host: {{ .host }}
+      port: {{ .port }}
+    {{- end }}
+
     drainOpts:
       gracePeriodSeconds: {{ .config.drainOpts.gracePeriodSeconds }}
       millisecondsBetweenBatches: {{ .config.drainOpts.millisecondsBetweenBatches }}
