Implement full json patch logic based on aeson-diff [1/3]
This contains a lot of stubs, as well in the tests as in the
implementation.  The old, awkward and incomplete implementation has
been removed.

--- a/libs/hscim/hscim.cabal
+++ b/libs/hscim/hscim.cabal
@@ -86,6 +86,7 @@ library
   ghc-options:        -Wall -Wredundant-constraints -Wunused-packages
   build-depends:
       aeson
+    , aeson-diff
     , aeson-qq
     , attoparsec
     , attoparsec-aeson
@@ -209,7 +210,6 @@ test-suite spec
   build-tool-depends: hspec-discover:hspec-discover
   build-depends:
       aeson
-    , attoparsec
     , base
     , bytestring
     , email-validate
