--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -215,6 +215,21 @@ config:
             allowed_to_create_channels: team-members
             allowed_to_open_channels: team-members
           lockStatus: locked
+      cells:
+        defaults:
+          status: enabled
+          lockStatus: unlocked
+      cellsInternal:
+        defaults:
+          status: enabled
+          lockStatus: unlocked
+          config:
+            backend:
+              url: https://cells-beta.wire.com
+            collabora:
+              edition: CODE
+            storage:
+              teamQuotaBytes: "1000000000000"
       allowedGlobalOperations:
         status: enabled
         config:
