Find active users

--- a/tools/db/mls-users/mls-users.cabal
+++ b/tools/db/mls-users/mls-users.cabal
@@ -23,9 +23,11 @@ library
 
   build-depends:
     , base
+    , containers
     , aeson
     , aeson-pretty
     , bytestring
+    , extra
     , cassandra-util
     , conduit
     , cql
