--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -227,7 +227,7 @@ config:
             backend:
               url: https://cells-beta.wire.com
             collabora:
-              edition: CODE
+              edition: COOL
             storage:
               teamQuotaBytes: "1000000000000"
       allowedGlobalOperations:
