--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -171,7 +171,7 @@ settings:
           backend:
             url: https://cells-beta.wire.com
           collabora:
-            edition: CODE
+            edition: COOL
           storage:
             teamQuotaBytes: "1000000000000"
     allowedGlobalOperations:
