use Admin API to create subscriptions for clients
I suspect that the protobuf variant leads to crashes. Let's see if the
Admin REST API works better.

--- a/charts/gundeck/values.yaml
+++ b/charts/gundeck/values.yaml
@@ -54,6 +54,10 @@ config:
     host: localhost
     port: 6650
 
+  pulsarAdmin:
+    host: localhost
+    port: 8080
+
   # To enable additional writes during a migration:
   # redisAdditionalWrite:
   #   host: redis-two
