--- a/services/gundeck/gundeck.integration.yaml
+++ b/services/gundeck/gundeck.integration.yaml
@@ -46,6 +46,10 @@ pulsar:
   host: localhost
   port: 6650
 
+pulsarAdmin:
+  host: localhost
+  port: 5080
+
 settings:
   httpPoolSize: 1024
   notificationTTL: 24192200
