--- a/charts/gundeck/templates/configmap.yaml
+++ b/charts/gundeck/templates/configmap.yaml
@@ -47,6 +47,12 @@ data:
       port: {{ .port }}
     {{- end }}
 
+    {{- with .pulsarAdmin }}
+    pulsarAdmin:
+      host: {{ .host }}
+      port: {{ .port }}
+    {{- end }}
+
     redis:
       host: {{ .redis.host }}
       port: {{ .redis.port }}
