--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -149,12 +149,14 @@ library
     , network-uri                           >=2.6
     , prometheus-client
     , psqueues                              >=0.2.2
+    , pulsar-admin
     , pulsar-client-hs
     , raw-strings-qq
     , resourcet                             >=1.1
     , retry                                 >=0.5
     , safe-exceptions
     , servant
+    , servant-client
     , servant-server
     , text                                  >=1.1
     , these
