Fix: integration tests

--- a/services/spar/spar.cabal
+++ b/services/spar/spar.cabal
@@ -356,6 +356,7 @@ executable spar-integration
     , cassava
     , cookie
     , crypton
+    , email-validate
     , exceptions
     , extended
     , hscim
