Create one Pulsar client per app
Consider pulsar-client-cpp to be (hopefully!) thread safe. To speed up
further usage, create the Client once per app and re-use it whenever a
client is needed.

--- a/services/gundeck/gundeck.cabal
+++ b/services/gundeck/gundeck.cabal
@@ -309,6 +309,7 @@ executable gundeck-integration
     , cassandra-util
     , containers
     , exceptions
+    , extended
     , gundeck
     , HsOpenSSL
     , http-client
@@ -320,6 +321,7 @@ executable gundeck-integration
     , network
     , network-uri
     , optparse-applicative
+    , pulsar-client-hs
     , random
     , retry
     , safe
