Reduce gc_grace_period for all conversation related tables to 1 day

--- a/services/galley/galley.cabal
+++ b/services/galley/galley.cabal
@@ -170,6 +170,7 @@ library
     Galley.Run
     Galley.Schema.Run
     Galley.Schema.V100_OutOfSync
+    Galley.Schema.V101_ConversationLowerGCGracePeriod
     Galley.Schema.V20
     Galley.Schema.V21
     Galley.Schema.V22
