--- a/services/galley/galley.integration.yaml
+++ b/services/galley/galley.integration.yaml
@@ -163,6 +163,8 @@ settings:
       defaults:
         status: enabled
         lockStatus: unlocked
+        config:
+          foo: bar
     cellsInternal:
       defaults:
         status: enabled
