Add missing path to helm

--- a/charts/nginz/values.yaml
+++ b/charts/nginz/values.yaml
@@ -438,6 +438,9 @@ nginx_conf:
     - path: /teams/([^/]*)/apps$
       envs:
       - all
+    - path: /teams/([^/]*)/apps/([^/]*)$
+      envs:
+      - all
     - path: /teams/([^/]*)/apps/([^/]*)/cookies$
       envs:
       - all
