set the defaults of cells correctly

--- a/charts/galley/values.yaml
+++ b/charts/galley/values.yaml
@@ -217,8 +217,8 @@ config:
           lockStatus: locked
       cells:
         defaults:
-          status: enabled
-          lockStatus: unlocked
+          status: disabled
+          lockStatus: locked
       cellsInternal:
         defaults:
           status: enabled
